--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 	<section class="footer-bottom  border-top clearfix">
 		<div class="container">	
 			<div class="center">
-				All rights reserved. Copyright© <br>
+				All Rights Reserved. Copyright ©2023 <br>
 			</div>
 		</div><!-- //container -->
 	</section> <!-- footer-bottom.// -->
